@@ -68,7 +68,7 @@ T_218theora:59986cbebb1a61762c16ae591ae8c345-88d9297a7f549c68aea49c3b4abf007a:pa
 T_219srt_short_timecodes:1350b59f405cabe1107c752f009f2f2a:passed:20060926-112658:0.213195421
 T_220ass_with_comments_at_start:4aad786f675e15a5efd623cb8d822cff:passed:20060926-120101:0.839985533
 T_221aac_lc_misdetected_as_sbr:aec2d52214eb5ff0574cea97df1597d3:passed:20061103-174221:0.021446207
-T_222stereo_mode:38e706ff1feab6cfe2c5fe529eb6f81c-81009b5a731256511eafed6401d86089-7d8639113bca1e08bd9636e931e27230:passed:20061107-092251:5.282790646
+T_222stereo_mode:34d9fa19579e3e6847d87f17ff2734a9-e3a34b71995f476b45c55f2cc8a47718-b36062c2d854ac9fe24cfa3eb4b355a7:passed:20061107-092251:5.282790646
 T_223ra_cook_keyframes:08b7c346362512c20bb0eb3ab4b5756c:passed:20061228-150947:4.592656226
 T_224dts:82f463460ce940e845084511b7308445-c2e94ffc5db0b5e9ff80cd9df6991d01:passed:20070206-174735:3.294211551
 T_225dts_in_wav:c4dd95c4c03612f468761b4b376e0b20-bb4c0ecc736bf7858f4db724f6a5afce:passed:20070206-174726:5.474995493
@@ -99,7 +99,7 @@ T_249mpeg2_no_codecprivate:3b68b55806e974f2aeaf19665a1f1d92:passed:20090531-1328
 T_250tag_selection:f0f55b985f0be4a4b271f47ed92e8f62-2c2a54f534fca06efe05981d022070a6-b22d97ee522b50db77c8abc2cdf15af0-9314c66c777145dc566d4a47a5571fff-71f432d2ef9465794c0ad471017887c2-71f432d2ef9465794c0ad471017887c2-23d5c3955b59bbfe7278ca02c4659824:passed:20090531-205640:2.496974031
 T_251vc1_truehd_eac3_from_evo:c511a94fdd16754716e43689b2369429:passed:20090606-220945:2.081741424
 T_252native_mpeg4:8d91a365780d5208b3ad383b46354a44:passed:20090620-163119:10.611827616
-T_253ui_language:7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637-7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637-7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637-7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637-7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637-7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637-7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637-7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637:passed:20090706-235831:1.993534351
+T_253ui_language:7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637-7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637-7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637-7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637-7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637-7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637-7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637-7783b20c4ca919a54b6dbb14c5dddac5-0daf58d02c0e2a26ac76e8b123c6f637:failed:20090706-235831:1.993534351
 T_254avi_with_subs:83a021026d102f8aea8ca760a56f293c-83a021026d102f8aea8ca760a56f293c-08c55e088b901e36e411b49f580112a8-5f6bb224635390784e23dbbb8d27bd03-c2064cb6ce72891bbbfc96ea5d0cb4a1:passed:20091025-104213:2.313283245
 T_255aspect_ratio_display_dimensions:0[4254x815-4254x815-1212x2424-1800x360-3600x360]1[3600x360-3600x360-1212x2424-1800x360-3600x360]2[7200x360-7200x360-1212x2424-1800x360-3600x360]:passed:20091025-164606:1.594118813
 T_256cropping_stereo_mode:0[S2-1-2-3-4]1[S1-5-6-7-8]:passed:20091025-204854:0.254589465
@@ -134,4 +134,4 @@ T_284merging_chapter_editions_when_appending:eb0b0a07f718f2e0b60a64f905ca7503:pa
 T_285h264_misdetected_as_mp3:69ae2a6361c8ed76cfdaffa4f6174cba:passed:20101031-105119:0.616260679
 T_286vp8_in_ogg:858944f0b5080149e89f6d845f752e49:passed:20101222-113225:1.052177834
 T_287mkvextract_exit_codes:2-2-2-2-2-2:passed:20101222-120655:0.099966851
-T_288identify_files_by_amg:26ab0db90d72e28ad0ba1e22ee510510:new:20110308-151817:0.026221677
+T_288identify_files_by_amg:26ab0db90d72e28ad0ba1e22ee510510:passed:20110308-151817:0.026221677
